--- a/themes/bartik/templates/StaticTemplate.html
+++ b/themes/bartik/templates/StaticTemplate.html
@@ -1,4 +1,7 @@
 <style>
+body {
+  background: yellow;
+}
 h1 {
   text-align: center;
   font-size: 10em;
@@ -6,6 +9,7 @@ h1 {
 p {
   font-size: 5em;
   font-style: italic;
+  text-align: center;
 }
 </style>
 
